--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@ html,
 body {
   max-width: 100vw;
   height: 100vh;
-  height: 100svh;
+  height: 100dvh;
   overflow-x: hidden;
 
   scroll-snap-type: y mandatory;
