--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -18,7 +18,7 @@
   font-family: monospace, monospace;
   padding: 25px;
 
-  color: rgb(250, 250, 250  );
+  color: rgb(250, 250, 250);
   box-shadow: 5px 5px 0px 0px rgb(247, 205, 69);
 }
 
@@ -59,15 +59,101 @@
 
 .hiddenProjectBackground {
   position: relative;
-  height: 100vh;
-  height: 100dvh;
+  min-height: 100vh;
+  min-height: 100dvh;
 
+  padding: 50px 0px;
   width: 100vw;
 
   background-color: rgb(20, 20, 20);
   
   overflow: hidden;
   white-space: nowrap;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.featuredProjectsContainer {
+  height: auto;
+  width: 85vw;
+
+  display: flex;
+  flex-direction: column;
+ 
+  overflow: initial !important;
+  white-space: initial !important;
+  gap: 10px;
+}
+
+.featuredProjectsHeader {
+  font-size: 2em;
+  text-transform: uppercase;
+  font-family: monospace, monospace;
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+
+  margin-bottom: -50px;
+
+  color: rgb(247, 205, 69);
+}
+
+.projectCarousel {
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-around;
+  gap: 25px;
+
+  padding: 25px;
+  padding-top: 50px;
+
+  overflow: auto;
+  overflow-y: hidden;
+}
+
+.projectThumbnail {
+  position: relative;
+  background-color: grey;
+
+  width: 500px;
+  aspect-ratio: 2 / 2;
+
+  border-radius: 13px;
+
+}
+
+.allProjectsLink {
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-family: monospace, monospace;
+
+  color: rgb(247, 205, 69);
+  align-self: flex-end;
+
+  margin-top: -25px;
+}
+
+.pageFooter {  
+  position: relative;
+  font-size: 1em;
+
+  overflow: hidden;
+  white-space: nowrap;
+
+  text-align: center;
+
+  font-family: monospace, monospace;
+  color: rgb(247, 205, 69);
+}
+
+.allProjectsLinkHeader {
+  display: none;
 }
 
 .dipShadowWrap{
@@ -82,7 +168,8 @@
   animation-play-state: paused;
 
   transform: perspective(10cm) rotate(var(--tapeAngle)) translate3D(0, 0, var(--tapeDepth));
-  bottom: var(--tapeBottomDistance);
+  top: var(--tapeBottomDistance);
+  z-index: 1000;
 }
 
 .dipBanner {
@@ -174,6 +261,8 @@
   margin-left: 15px;
   margin-right: 35px;
 
+  display: inline-block;
+
   -webkit-user-select: none; /* Safari */        
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
@@ -187,6 +276,13 @@
 @media (prefers-reduced-motion) {
   .card:hover span {
     transform: none;
+  }
+}
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+  .intro {
+    flex-direction: column;
   }
 }
 
@@ -205,7 +301,7 @@
   }
 
   .dipShadowWrap {
-    bottom: calc((var(--tapeBottomDistance)) - 6dvh);
+    top: calc((var(--tapeBottomDistance)) + 6dvh);
   }
 
   .helloHeader {
@@ -215,15 +311,36 @@
   .helloSubheader {
     font-size: 1.5em;
   }
+
   .helloScrollNotice {
     font-size: 1.2em;
   }
-}
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .intro {
+  .hiddenProjectBackground {
+    padding: 50px 0px;
+  }
+
+  .featuredProjectsHeader {
+    font-size: 1.5em;
+    align-self: center;
+  }
+
+  .allProjectsLink {
+    font-size: 1em;
+    align-self: center;
+  }
+
+  .projectCarousel {
     flex-direction: column;
+  }
+
+  .projectThumbnail {
+    width: 300px;
+    flex-shrink: 0;
+  }
+
+  .pageFooter {
+    margin-top: 30px;
   }
 }
 
@@ -241,18 +358,20 @@
     position: static;
     font-size: 5vh;
     padding: 0px;
-  }  
+  }
+}
+
+/* Vertical Carousel */
+@media (max-width: 650px) {
 }
 
 
 /* Height Stop */
-@media (max-height: 350px) {
+@media (max-height: 400px) {
   .intro {
-    height: 349px;
+    height: 400px;
   }
-  .hiddenProjectBackground {
-    height: 349px;
-  }
+
   .helloHeader {
     font-size: 24px;
   }
@@ -285,8 +404,17 @@
     position: static;
     font-size: 20px;
   }  
+  .featuredProjectsContainer {
+    width: 230px;
+  }
 }
 
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
+}
+
+@media (prefers-reduced-motion) {
+  .projectThumbnail {
+    transform: unset;
+  }
 }
