--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -269,6 +269,17 @@
   user-select: none; /* Standard */
 }
 
+.visuallyHidden{
+  position: absolute;
+  top: 0;
+  left: -2px;
+  
+  width: 1px;
+  height: 1px;
+
+  overflow: hidden;
+}
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
 }
